--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,19 +4,30 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+ <title>關於我</title>
+ <link rel="stylesheet" href="stylesheet/css/style_scss.css" />
 </head>
 <body>
-<header>
-
-</header>
+    <header>
+        <figure><img src="./images/LOCO.png" alt="怡慧個人網站的LOGO" /></figure>
+        <nav id="topBar">
+          <ul id="menu">
+            <li><a href="./index.html">首頁</a></li>
+            <li><a href="./aboutMe.html">關於我</a></li>
+            <li><a href="./portfolio.html">作品集</a></li>
+            <li><a href="./learningNote.html">學習紀錄</a></li>
+          </ul>
+        </nav>
+      </header>
 
 <main>
-
+    <h1>關於我</h1> 
 </main>
 
 <footer>
-
+    <img src="./images/LOCO.png" alt="" />
+    <div><a href="./index.html">首頁</a><a href="./aboutMe.html">關於我</a><a href="./portfolio.html">作品集</a><a href="./learningNote.html">學習紀錄</a></div>
+      <small class="copyright">Copyright© 2024 詹怡慧</small>
 </footer>
 
 </body>
