--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <figure><img src="./images/LOCO.png" alt="怡慧個人網站的LOGO" /></figure>
       <nav id="topBar">
         <ul id="menu">
+          <li><a href="./index.html">首頁</a></li>
           <li><a href="./aboutMe.html">關於我</a></li>
           <li><a href="./portfolio.html">作品集</a></li>
           <li><a href="./learningNote.html">學習紀錄</a></li>
@@ -21,13 +22,22 @@
 
     <main>
       <section class="index-banner">
-        <img src="./images/banner.png" alt="" />
+        <div>
+          <img class="decorate-banner" src="./images/decorate-banner.png" alt="">
+        </div>
+        <div>
+          <img class="decorate-banner2" src="./images/decorate-banner02.png" alt="">
+        </div>
+        <div>
+          <img class="decorate-banner3" src="./images/decorate-banner02.png" alt="">
+        </div>
+        <img class="banner" src="./images/banner.png" alt="" />
       </section>
       <section class="index-aboutMe">
         <h2>關於我</h2>
         <a href="./aboutMe.html" class="button">了解我</a>
         <div>
-          <p>您好!我是詹怡慧</p>
+          <p></p>
           <img src="./images/me.png" alt="怡慧的生活照" />
         </div>
       </section>
@@ -41,7 +51,7 @@
               <p style="font-size: 1.75rem">看</p>
               <p>到...</p>
             </div>
-            <small>scss切版、react、javaScript、C#遊戲、設計</small>
+            <p style="align-self: center;">scss切版、react、javaScript、C#遊戲、設計</p>
             <a href="./portfolio.html" class="button">觀看作品集</a>
           </div>
         </div>
@@ -65,7 +75,7 @@
         <a href="./learningNote.html" class="button">更多</a>
       </section>
       <section class="index-contact">
-        <img class="bg-wave" src="./images/1920wave.png" alt="" />
+        <!-- <img class="bg-wave" src="./images/1920wave.png" alt="" /> -->
         <div class="contact-top"><h2>聯繫我</h2></div>
         <div class="contact-bottom">
           <a href="https://www.facebook.com/zhan.y.hui.92?mibextid=LQQJ4d"
