--- a/learningNote.html
+++ b/learningNote.html
@@ -37,19 +37,28 @@
             <div class="contentContainer">
                 <a href="#" class="simple-learnNoteComponent">
                     <h3>文章標題</h3>
-                    <p class="tag-card">tag</p>
+                    <div class="hugTag">
+                      <p class="tag-card">tag</p>
+                    </div>
+                    
                   </a>
                   <a href="#" class="simple-learnNoteComponent">
                     <h3>文章標題</h3>
-                    <p class="tag-card">tag</p>
+                    <div class="hugTag">
+                      <p class="tag-card">tag</p>
+                    </div>
                   </a>
                   <a href="#" class="simple-learnNoteComponent">
                     <h3>文章標題</h3>
-                    <p class="tag-card">tag</p>
+                    <div class="hugTag">
+                      <p class="tag-card">tag</p>
+                    </div>
                     </a>
                     <a href="#" class="simple-learnNoteComponent">
                         <h3>文章標題</h3>
-                        <p class="tag-card">tag</p>
+                        <div class="hugTag">
+                          <p class="tag-card">tag</p>
+                        </div>
                         </a>
            </div>
            
