--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>怡慧的個人網站</title>
     <link rel="stylesheet" href="stylesheet/css/style_scss.css" />
+ 
   </head>
   <body>
     <header>
-      <figure><img src="./images/LOCO.png" alt="怡慧個人網站的LOGO" /></figure>
+      <figure><img class="logo" src="./images/LOCO.png" alt="怡慧個人網站的LOGO" /></figure>
       <nav id="topBar">
         <ul id="menu">
           <li><a href="./index.html">首頁</a></li>
@@ -25,24 +26,30 @@
         <div>
           <img class="decorate-banner" src="./images/decorate-banner.png" alt="">
         </div>
-        <div>
+        <!-- <div>
           <img class="decorate-banner2" src="./images/decorate-banner02.png" alt="">
-        </div>
+        </div> -->
         <div>
-          <img class="decorate-banner3" src="./images/decorate-banner02.png" alt="">
+          <img class="decorate-banner3" src="./images/decorate-banner04.png" alt="">
         </div>
         <img class="banner" src="./images/banner.png" alt="" />
       </section>
       <section class="index-aboutMe">
-        <h2>關於我</h2>
-        <a href="./aboutMe.html" class="button">了解我</a>
-        <div>
-          <p></p>
+        <h2>{"關於我"}</h2>
+        <div class="aboutMe-content">
+          <div class="content-intro">
+            <h3>您好!我是詹怡慧</h3>
+            <p>從大學開始做遊戲程式設計，到畢業後嘗試做前端。
+              是個在前進的過程尋找適合自己的路，
+              並在當下追求進步的人。
+            </p>
+            <a href="./aboutMe.html" class="button">了解我</a>
+          </div>
           <img src="./images/me.png" alt="怡慧的生活照" />
         </div>
       </section>
       <section class="index-portfolio">
-        <h2>作品集</h2>
+        <h2>{"作品集"}</h2>
         <div class="index-portfolioInfo">
           <img src="./images/index-portfolio-book.png" alt="書" />
           <div class="index-portfolioInfo-content">
@@ -57,19 +64,37 @@
         </div>
       </section>
       <section class="index-note">
-        <h2>學習紀錄</h2>
+        <h2>{"學習紀錄"}</h2>
         <div class="index-noteContainer">
           <a href="#" class="simple-learnNoteComponent">
             <h3>文章標題</h3>
-            <p class="tag-card">tag</p>
+            <div class="hugTag">
+              <p class="tag-card">程式</p>
+            </div>
+          </a>
+          <a href="#" class="simple-learnNoteComponent">
+            <h3>嘗試Figma多重選單</h3>
+            <div class="hugTag">
+              <p class="tag-card">設計</p>
+            </div>
+          </a>
+          <a href="#" class="simple-learnNoteComponent">
+            <h3>js更新子選項</h3>
+            <div class="hugTag">
+              <p class="tag-card">程式</p>
+            </div>
+          </a>
+          <a href="#" class="simple-learnNoteComponent">
+            <h3>react多重篩選</h3>
+            <div class="hugTag">
+              <p class="tag-card">程式</p>
+            </div>
           </a>
           <a href="#" class="simple-learnNoteComponent">
             <h3>文章標題</h3>
-            <p class="tag-card">tag</p>
-          </a>
-          <a href="#" class="simple-learnNoteComponent">
-            <h3>文章標題</h3>
-            <p class="tag-card">tag</p>
+            <div class="hugTag">
+              <p class="tag-card">tag</p>
+            </div>
           </a>
         </div>
         <a href="./learningNote.html" class="button">更多</a>
@@ -87,7 +112,7 @@
     </main>
 
     <footer>
-      <img src="./images/LOCO.png" alt="" />
+      <img class="logo" src="./images/LOGO.svg" alt="" />
       <div><a href="./index.html">首頁</a><a href="./aboutMe.html">關於我</a><a href="./portfolio.html">作品集</a><a href="./learningNote.html">學習紀錄</a></div>
         <small class="copyright">Copyright© 2024 詹怡慧</small>
     </footer>
