--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,34 +1,80 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
-<head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>關於我</title>
- <link rel="stylesheet" href="stylesheet/css/style_scss.css" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>關於我</title>
+    <link rel="stylesheet" href="stylesheet/css/style_scss.css" />
+  </head>
+
+  <body>
     <header>
-        <figure><img src="./images/LOCO.png" alt="怡慧個人網站的LOGO" /></figure>
-        <nav id="topBar">
-          <ul id="menu">
-            <li><a href="./index.html">首頁</a></li>
-            <li><a href="./aboutMe.html">關於我</a></li>
-            <li><a href="./portfolio.html">作品集</a></li>
-            <li><a href="./learningNote.html">學習紀錄</a></li>
-          </ul>
-        </nav>
-      </header>
+      <figure><img src="./images/LOCO.png" alt="怡慧個人網站的LOGO" /></figure>
+      <nav id="topBar">
+        <ul id="menu">
+          <li><a href="./index.html">首頁</a></li>
+          <li><a href="./aboutMe.html">關於我</a></li>
+          <li><a href="./portfolio.html">作品集</a></li>
+          <li><a href="./learningNote.html">學習紀錄</a></li>
+        </ul>
+      </nav>
+    </header>
 
-<main>
-    <h1>關於我</h1> 
-</main>
+    <main>
+      <div class="aboutMe-Banner">
 
-<footer>
-    <img src="./images/LOCO.png" alt="" />
-    <div><a href="./index.html">首頁</a><a href="./aboutMe.html">關於我</a><a href="./portfolio.html">作品集</a><a href="./learningNote.html">學習紀錄</a></div>
+        <div class="aboutMe-info">
+          <div class="aboutMe-img">
+            <img src="./images/me.png" alt="" />
+          </div>
+          <div class="aboutMe-keyword">
+            <h1>詹怡慧 <span>ciuhyi@gmail.com</span></h1>
+            <div class="tags-Container">
+              <p class="tag">目標前端工程師</p>
+              <p class="tag">組織規劃</p>
+              <p class="tag">追求進步</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="aboutMe-intro">
+          <p>
+            從大學開始接觸程式和設計，四年累積了一些遊戲製作和設計的經驗。由於大二網頁設計課接觸HTML，種下了好奇的種子；在看到職訓班網頁課程時冒出的小芽推動我報名，經過三個月的學習和實作，讓我確定想深根前端。
+            希望自己有機會通過工作熟練與後端交接的過程，幫助團隊有效率地完成專案。
+          </p>
+        </div>
+      </div>
+
+      <div>
+        <div class="aboutMe-experience">
+          <img src="./images/experience.svg" alt="" />
+        </div>
+        <div class="aboutMe-skills">
+          <div class="aboutMe-title">
+            <img src="./images/aboutMe-title.png" alt="" />
+          </div>
+          <div>
+            <a href=""><img src="" alt="" /></a>
+            <a href=""><img src="" alt="" /></a>
+            <a href=""><img src="" alt="" /></a>
+            <a href=""><img src="" alt="" /></a>
+            <a href=""><img src="" alt="" /></a>
+          </div>
+        </div>
+        <div class="aboutMe-project"></div>
+
+      </div>
+    </main>
+
+    <footer>
+      <img src="./images/LOCO.png" alt="" />
+      <div>
+        <a href="./index.html">首頁</a><a href="./aboutMe.html">關於我</a
+        ><a href="./portfolio.html">作品集</a
+        ><a href="./learningNote.html">學習紀錄</a>
+      </div>
       <small class="copyright">Copyright© 2024 詹怡慧</small>
-</footer>
-
-</body>
+    </footer>
+  </body>
 </html>
