--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div>
           <img class="decorate-banner3" src="./images/decorate-banner04.png" alt="">
         </div>
-        <img class="banner" src="./images/banner.png" alt="" />
+        <img class="banner" src="./images/banner.svg" alt="" />
       </section>
       <section class="index-aboutMe">
         <h2>{"關於我"}</h2>
@@ -101,7 +101,7 @@
       </section>
       <section class="index-contact">
         <!-- <img class="bg-wave" src="./images/1920wave.png" alt="" /> -->
-        <div class="contact-top"><h2>聯繫我</h2></div>
+        <div class="contact-top"><h2>{"聯繫我"}</h2></div>
         <div class="contact-bottom">
           <a href="https://www.facebook.com/zhan.y.hui.92?mibextid=LQQJ4d"
             ><img src="./images/Facebook.png" alt=""
