--- a/aboutMe.html
+++ b/aboutMe.html
@@ -46,20 +46,23 @@
         </div>
       </div>
 
-      <div>
+      <div class="aboutMe-content">
         <div class="aboutMe-experience">
           <img src="./images/experience.svg" alt="" />
         </div>
         <div class="aboutMe-skills">
           <div class="aboutMe-title">
-            <img src="./images/aboutMe-title.png" alt="" />
+            <img src="./images/aboutMe-title.png" alt="title裝飾" />
           </div>
-          <div>
-            <a href=""><img src="" alt="" /></a>
-            <a href=""><img src="" alt="" /></a>
-            <a href=""><img src="" alt="" /></a>
-            <a href=""><img src="" alt="" /></a>
-            <a href=""><img src="" alt="" /></a>
+          <div class="skills-container">
+            <a href="#"><img src="./images/CSharp-Logo.png" alt="CSharp按鈕" /></a>
+            <a href="#"><img src="./images/React-Logo.png" alt="React按鈕" /></a>
+            <a href="#"><img src="./images/JavaScript-Logo.png" alt="JavaScript按鈕" /></a>
+            <a href="#"><img src="./images/CSS3-Logo.png" alt="CSS3按鈕" /></a>
+            <a href="#"><img src="./images/sass-Logo.png" alt="sass按鈕" /></a>
+            <a href="#"><img src="./images/Html5-Logo.png" alt="Html按鈕" /></a>
+            <a href="#"><img src="./images/JQuery-Logo.png" alt="JQuery按鈕" /></a>
+            <a href="#"><img src="./images/Figma-Logo.png" alt="Figma按鈕" /></a>
           </div>
         </div>
         <div class="aboutMe-project"></div>
