--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
       crossorigin="anonymous"
     /> -->
     <!-- swiper -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
-    <link rel="stylesheet" src="./node_modules/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css" />
     <title>怡慧的個人網站</title>
     <style>
       .swiper-container {
