--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       .swiper-wrapper {
         width: 100%;
         display: flex;
+        column-gap: 15px;
       }
     </style>
   </head>
