--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
       crossorigin="anonymous"
     /> -->
-    <!-- swiper -->
-    <link rel="stylesheet" src="./node_modules/swiper/swiper-bundle.min.css" />
+    <!-- swiper -->   
+    <link rel="stylesheet" src=".././node_modules/swiper/swiper-bundle.min.css" />
     <title>怡慧的個人網站</title>
     <style>
       .swiper-container {
@@ -44,7 +44,7 @@
         </ul>
       </nav>
     </header>
-   
+
     <main>
       <section class="index-banner">
         <div>
@@ -158,6 +158,7 @@
       <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
 
       <script>
+      
         var swiper = new Swiper(".mySwiper", {
           effect: "coverflow",
           grabCursor: true,
@@ -196,7 +197,7 @@
       </div>
       <small class="copyright">Copyright© 2024 詹怡慧</small>
     </footer>
-    
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script> -->
   </body>
