<script src="../node_modules/swiper/swiper-bundle.min.js"></script>

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <a href="./learningNote.html" class="button">更多</a>
       </section>
 
-      <script src="node_modules/swiper/swiper-bundle.min.js"></script>
+      <script src="../node_modules/swiper/swiper-bundle.min.js"></script>
 
       <script>
         var swiper = new Swiper(".mySwiper", {
