--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       crossorigin="anonymous"
     /> -->
     <!-- swiper -->   
-    <link rel="stylesheet" src="./node_modules/swiper/swiper-bundle.min.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+  />
+    <!-- <link rel="stylesheet" src="./node_modules/swiper/swiper-bundle.min.css" /> -->
     <title>怡慧的個人網站</title>
     <style>
       .swiper-container {
@@ -155,8 +159,9 @@
         <a href="./learningNote.html" class="button">更多</a>
       </section>
 
-      <script src="../node_modules/swiper/swiper-bundle.min.js"></script>
+      <!-- <script src="../node_modules/swiper/swiper-bundle.min.js"></script> -->
 
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
       <script>
         var swiper = new Swiper(".mySwiper", {
           effect: "coverflow",
